# Baza-Filmowa-PRI

./: .gitignore  CMakeLists.txt  Main.c  README.md
CommonIO/: BasicIO.c  BasicIO.h  ConditionalInput.c  ConditionalInput.h  NameInput.c  NameInput.h
Examples/: PrzykladowaBaza.mbf  Tarantino.mbf  Zmyslona.mbf
Exercise (PL)/: PrzykładBazy.accdb  Zadanie.txt
FileIO/: DatabaseFile.c  DatabaseFile.h  Deserialization.c  Deserialization.h  FileSystem.c  FileSystem.h  Serialization.c  Serialization.h  Tag.c  Tag.h
FileIO/Deserialization/: ActorListDeserialization.c  ActorListDeserialization.h  BasicDeserialization.c  BasicDeserialization.h  MovieListDeserialization.c  MovieListDeserialization.h  ObjectDeserialization.c  ObjectDeserialization.h  RoleListDeserialization.c  RoleListDeserialization.h  StudioListDeserialization.c  StudioListDeserialization.h  TagDeserialization.c  TagDeserialization.h
FileIO/Serialization/: BasicSerialization.c  BasicSerialization.h  ListSerialization.c  ListSerialization.h  ObjectSerialization.c  ObjectSerialization.h  TagSerialization.c  TagSerialization.h
IO/: BasicIO.c  BasicIO.h  ConditionalInput.c  ConditionalInput.h  NameInput.c  NameInput.h  QuotedInput.c  QuotedInput.h
Lists/: ActorList.c  ActorList.h  Database.c  Database.h  Declarations.h  MovieList.c  MovieList.h  RoleList.c  RoleList.h  StudioList.c  StudioList.h
Lists/Algo/: ListSort.c  Sort.c  Sort.h
Lists/IO/: ActorListIO.c  ActorListIO.h  MovieListIO.c  MovieListIO.h  RoleListIO.c  RoleListIO.h  StudioListIO.c  StudioListIO.h
Objects/: Actor.c  Actor.h  Declarations.h  Movie.c  Movie.h  ObjectsRequirements.h  Role.c  Role.h  Studio.c  Studio.h
Objects/IO/: ActorIO.c  ActorIO.h  MovieIO.c  MovieIO.h  RoleIO.c  StudioIO.c  StudioIO.h
Scanning/: ActorScanning.c  ActorScanning.h
Source/: Main.c
Source/CommonIO/: BasicIO.c  BasicIO.h  ConditionalInput.c  ConditionalInput.h  NameInput.c  NameInput.h
Source/FileIO/: DatabaseFile.c  DatabaseFile.h  Deserialization.c  Deserialization.h  FileSystem.c  FileSystem.h  Serialization.c  Serialization.h  Tag.c  Tag.h
Source/Lists/: ActorList.c  ActorList.h  Database.c  Database.h  Declarations.h  MovieList.c  MovieList.h  RoleList.c  RoleList.h  StudioList.c  StudioList.h
Source/Objects/: Actor.c  Actor.h  Declarations.h  Movie.c  Movie.h  Role.c  Role.h  Studio.c  Studio.h
Source/UserInterface/: Backup.c  Backup.h  Logo.c  Logo.h  MainMenu.c  MainMenu.h  MenuPlayer.c  (+3 more)
UserInterface/: Backup.c  Backup.h  DeletionMenu.c  DeletionMenu.h  InsertionMenu.c  InsertionMenu.h  Logo.c  Logo.h  MainMenu.c  MainMenu.h  MenuPlayer.c  MenuPlayer.h  QueryMenu.c  QueryMenu.h  SortMenu.c  SortMenu.h
Utility/: Byte.h  Date.c  Date.h  MovieLimits.c  MovieLimits.h  String.c  String.h  System.c  System.h
(+85 files in other folders)
